--- a/index.html
+++ b/index.html
@@ -7,124 +7,175 @@
     <link rel="stylesheet" href="./styling.css" />
   </head>
   <body>
-    <div class="header">
-      <img src="./images/logo.png" alt="logo" />
+    <div class="cover">
+      <div class="header">
+        <img src="./images/logo.png" alt="logo" />
 
-      <div class="links">
-        <a href="">Home</a>
-        <a href="">How tere works</a>
-        <a href="">Tere benefit</a>
-        <button class="help-btn">Help Center</button>
+        <div class="links">
+          <a href="">Home</a>
+          <a href="">How tere works</a>
+          <a href="">Tere benefit</a>
+          <button class="help-btn">Help Center</button>
+        </div>
       </div>
-    </div>
-    <div class="hero">
-      <div class="section1">
-        <h1>DOWNLOAD APP, SAVE MONEY, MAKE FRIENDS!</h1>
-        <p>
-          Its simple and its free. Play your part in reducing Carbon Footprint
-          and help Mother Nature to sustain its beauty. So what are you waiting
-          for ? Lets ride together
+      <div class="hero">
+        <div class="section1">
+          <h1>DOWNLOAD APP, SAVE MONEY, MAKE FRIENDS!</h1>
+          <p>
+            Its simple and its free. Play your part in reducing Carbon Footprint
+            and help Mother Nature to sustain its beauty. So what are you
+            waiting for ? Lets ride together
+          </p>
+
+          <div class="section1-btn">
+            <button class="btn1">
+              <img src="./images/play-store.png" />
+              DOWNLOAD
+            </button>
+            <button class="btn2">
+              <img src="./images/app-store.png" />
+              DOWNLOAD
+            </button>
+          </div>
+        </div>
+        <div class="section2">
+          <img src="./images/car in hero.png" alt="car" />
+        </div>
+      </div>
+      <div class="feedback-box">
+        <p>Let’s go. Get a link to download the app.</p>
+        <div class="phone-btns">
+          <input class="phone-btn1" placeholder="Enter mobile phone number " />
+          <button class="phone-btn2">APPLY TO DRIVE</button>
+        </div>
+      </div>
+      <div class="work">
+        <h1 class="tere-work">HOW <span>TERE </span>WORKS</h1>
+        <p class="tere-work-p">
+          Download and install the tere app. Enter your phone number and make
+          your user account. when approved you may start driving.
         </p>
-
-        <div class="section1-btn">
-          <button class="play-store">
-            <img src="./images/play-store.png" />
-            DOWNLOAD
-          </button>
-          <button class="app-store">
-            <img src="./images/app-store.png" />
-            DOWNLOAD
-          </button>
+      </div>
+      <div class="features">
+        <div class="features-column1">
+          <div class="column1-div1">
+            <div>
+              <img
+                class="design"
+                src="./images/design.png"
+                alt="design"
+                src="./images/1.png"
+              />
+              <span class="design1">1</span>
+            </div>
+            <h2>REQUEST A RIDE</h2>
+            <p>
+              Have to reach office or going for shopping ? Just put your current
+              location and destination and search a ride that suits you
+            </p>
+          </div>
+          <div class="column1-div2">
+            <div>
+              <img class="design" src="./images/design.png" alt="design" />
+              <span class="design3">3</span>
+            </div>
+            <h2>INSTANT NOTIFICATIONS</h2>
+            <p>
+              Get instant notifications for your rides and be in contact with
+              fellow riders all the time
+            </p>
+          </div>
+        </div>
+        <div class="features-column2">
+          <div class="circle">
+            <img src="./images/mobile.png" alt="mobile" />
+          </div>
+        </div>
+        <div class="features-column3">
+          <div class="column3-div1">
+            <div>
+              <img
+                class="design"
+                src="./images/design.png"
+                alt="design"
+                src="./images/1.png"
+              />
+              <span class="design2">2</span>
+            </div>
+            <h2>POST A RIDE</h2>
+            <p>
+              Going somewhere but hate to travel alone - just post your ride
+              details and publish it
+            </p>
+          </div>
+          <div class="column3-div2">
+            <div>
+              <img
+                class="design"
+                src="./images/design.png"
+                alt="design"
+                src="./images/1.png"
+              />
+              <span class="design4">4</span>
+            </div>
+            <h2>CASHLESS PAYMENT</h2>
+            <p>
+              Payment made easy by using your own Wallet - no more cash to carry
+            </p>
+          </div>
         </div>
       </div>
-      <div class="section2">
-        <img src="./images/car in hero.png" alt="car" />
+      <div class="benefit-H">
+        <img class="dots" src="./images/dots.png" alt="dots" />
+        <h2 class="tere-work"><span>TERE</span> BENEFITS</h2>
       </div>
-    </div>
-    <div class="feedback-box">
-      <p>Let’s go. Get a link to download the app.</p>
-      <div class="phone-btns">
-        <button class="phone-btn1">Enter mobile phone number</button>
-        <button class="phone-btn2">APPL TO DRIVE</button>
+      <div class="benefit1">
+        <div>
+          <span>01.</span>
+          <h2>Flexible <br />working hours</h2>
+          <p>You can decide when, and how much time you want to drive.</p>
+        </div>
+        <img src="./images/watch.png" />
       </div>
-    </div>
-    <div class="work">
-      <h1 class="tere-work">HOW <span>TERE </span>WORKS</h1>
-      <p class="tere-work-p">
-        Download and install the tere app. Enter your phone number and make your
-        user account. when approved you may start driving.
-      </p>
-    </div>
-    <div class="features">
-      <div class="features-column1">
-        <div class="column1-div1">
-          <div>
-            <img
-              class="design"
-              src="./images/design.png"
-              alt="design"
-              src="./images/1.png"
-            />
-            <span class="design1">1</span>
-          </div>
-          <h2>REQUEST A RIDE</h2>
+      <div class="benefit2">
+        <img src="./images/coins.png" />
+        <div>
+          <span>02.</span>
+          <h2>Earnings</h2>
+          <p>By driving with tere you can earn more.</p>
+        </div>
+      </div>
+      <div class="benefit3">
+        <div>
+          <span>03.</span>
+          <h2>Customer <br />support 24/7</h2>
           <p>
-            Have to reach office or going for shopping ? Just put your current
-            location and destination and search a ride that suits you
+            Tere is a local service provider and we are proud to support you in
+            your local language. We are proud to be at your service 24/7!
           </p>
         </div>
-        <div class="column1-div2">
-          <div>
-            <img class="design" src="./images/design.png" alt="design" />
-            <span class="design3">3</span>
-          </div>
-          <h2>INSTANT NOTIFICATIONS</h2>
-          <p>
-            Get instant notifications for your rides and be in contact with
-            fellow riders all the time
-          </p>
-        </div>
+        <img src="./images/man.png" />
       </div>
-      <div class="features-column2">
-        <div class="circle">
-          <img src="./images/mobile.png" alt="mobile" />
+      <div class="footer">
+        <img src="./images/logo2.png" />
+        <div class="footer-div">
+          <h5>Be Our Friend</h5>
+          <p>3, Season Park, Jakarta support@foodyar.co,id 021 - 1111 - 2222</p>
         </div>
+        <div class="footer-div">
+          <h5>Be Our Friend</h5>
+          <p>3, Season Park, Jakarta support@foodyar.co,id 021 - 1111 - 2222</p>
+        </div>
+        <button class="last-btn">
+          <img src="./images/play-store.png" />
+          DOWNLOAD
+        </button>
+        <button class="last-btn">
+          <img src="./images/app-store.png" />
+          DOWNLOAD
+        </button>
       </div>
-      <div class="features-column3">
-        <div class="column3-div1">
-          <div>
-            <img
-              class="design"
-              src="./images/design.png"
-              alt="design"
-              src="./images/1.png"
-            />
-            <span class="design2">2</span>
-          </div>
-          <h2>POST A RIDE</h2>
-          <p>
-            Going somewhere but hate to travel alone - just post your ride
-            details and publish it
-          </p>
-        </div>
-        <div class="column3-div2">
-          <div>
-            <img
-              class="design"
-              src="./images/design.png"
-              alt="design"
-              src="./images/1.png"
-            />
-            <span class="design4">4</span>
-          </div>
-          <h2>CASHLESS PAYMENT</h2>
-          <p>
-            Payment made easy by using your own Wallet - no more cash to carry
-          </p>
-        </div>
-      </div>
-      <img class="dots" src="./images/dots.png" alt="dots" />
+      <p class="end">All Rights Reserved tere by Codematics 2022</p>
     </div>
-    
   </body>
 </html>
